<resources>
    <string name="app_name">Chaitanya_University_2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_home">Home</string>
    <string name="menu_timetable">TimeTable</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_exams_results">Exams &amp; Results</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_fees">Fees</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile_settings">Profile Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>

    <string name="tv_student_admno">E18332</string>
    <string name="tv_student_department">Computer Science</string>



</resources>
